--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
     .checklist h2 {
       text-align: center;
+      color: #0056b3;
+    }
+
+    .checklist h3 {
+      text-align: right;
       margin-bottom: 1.5rem;
       color: #0056b3;
     }
@@ -136,7 +141,7 @@
 
 <!-- Same HTML <head> and styles as before, just below the body content: -->
 <div class="checklist">
-  <h2>Resource Checklist</h2>
+  <h2>Minecraft Resource Checklist</h2><h3>- by golden ≧◡≦</h3>
   <div id="resource-list"></div>
 
   <div class="add-resource">
